--- a/todo.css
+++ b/todo.css
@@ -32,6 +32,7 @@ button{
     font-family: 19px;
 }
 .text ul{
+    font-family: 'Ubuntu', sans-serif;
     position: relative;
     background-color: rgb(7, 67, 67);
     color: white;
